package com.directi.training.dip.exercise;

public interface IEncoder {
    String encode(String data);
}
